welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:2: error: too many arguments for method droite: ()Unit
	droite(2);
              ^