welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
override def run() {
	droite(2);
	for (i<-6 to 0 by -1) {
		baisseBrosse;
		if (estFaceMur) {
			setX(i);
			setY(0);
			baisseBrosse;
		}
		while (!estFaceMur) {
			avance();
		}
		
	}
		
}

